ignore astro and netlify dirs

--- a/.gitignore
+++ b/.gitignore
@@ -57,6 +57,12 @@ web_modules/
 # Optional stylelint cache
 .stylelintcache
 
+# Astro
+.astro/
+
+# Netlify
+.netlify/
+
 # Microbundle cache
 .rpt2_cache/
 .rts2_cache_cjs/
