--- a/.gitignore
+++ b/.gitignore
@@ -128,6 +128,12 @@ dist
 # Stores VSCode versions used for testing VSCode extensions
 .vscode-test
 
+# Astro build and cache directories
+.astro
+
+# Netlify build and cache directories
+.netlify
+
 # yarn v2
 .yarn/cache
 .yarn/unplugged
